@@ -1,5 +1,6 @@
 package br.com.tt.petshop.service;
 
+import br.com.tt.petshop.dto.ClienteEntradaDto;
 import br.com.tt.petshop.exception.CpfInvalidoException;
 import br.com.tt.petshop.model.Cliente;
 import br.com.tt.petshop.repository.ClienteRepository;
@@ -31,8 +32,8 @@ class ClienteServiceTest {
     void deveriaListarUsandoORepository(){
 
         //Preparação
-        List<Cliente> listaClientes = Arrays.asList(new Cliente("Gilberto", "911.948.160-88"));
-        Mockito.when(clientRepositoryMock.listarClientes()).thenReturn(listaClientes);
+        ClienteEntradaDto dto = new ClienteEntradaDto("Gilberto", "911.948.160-88");
+        Mockito.when(clientRepositoryMock.listarClientes()).thenReturn(List.of(new Cliente(dto)));
 
         //Act
         List<Cliente> clientes = clienteService.listarClientes();
@@ -49,11 +50,12 @@ class ClienteServiceTest {
     @Test
     void deveriaSalvarComSucesso(){
         //Preparação
-        Cliente clienteASerSalvo = new Cliente("Fulano dos Santos", "CPF_VALIDO");
+        ClienteEntradaDto clienteDtoASerSalvo = new ClienteEntradaDto("Fulano dos Santos", "CPF_VALIDO");
         Mockito.when(cpfValidatorMock.verificaSeCpfValido("CPF_VALIDO")).thenReturn(true);
+        Cliente clienteASerSalvo = new Cliente(clienteDtoASerSalvo);
 
         //Act
-        clienteService.criarCliente(clienteASerSalvo);
+        clienteService.criarCliente(clienteDtoASerSalvo);
 
         //Verificação = 1 chamada = Mockito.times(1)
         Mockito.verify(clientRepositoryMock).criarCliente(clienteASerSalvo);
@@ -62,7 +64,7 @@ class ClienteServiceTest {
     @Test
     void deveriaFalharComCpfInvalido(){
         //Preparação
-        Cliente clienteASerSalvo = new Cliente("Fulano dos Santos", "CPF_INVALIDO");
+        ClienteEntradaDto clienteASerSalvo = new ClienteEntradaDto("Fulano dos Santos", "CPF_INVALIDO");
         Mockito.when(cpfValidatorMock.verificaSeCpfValido("CPF_INVALIDO")).thenReturn(false);
 
         //Act
